--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>new repo</title>
+    <title>Document</title>
 </head>
 
 <body>
-
-    <p>azim </p>
-
+    <p>azim ashik</p>
 </body>
 
 </html>
