--- a/project/day1,2,3/index.html
+++ b/project/day1,2,3/index.html
@@ -13,7 +13,7 @@
     <h1>azim</h1>
     <h3>ashique</h3>
     <h4>azim</h4>
-    <img src="about me.png" alt="">
+    <img src="./images/myImg.jpg" alt="">
 
 </body>
 
