--- a/project/practise hero/index.html
+++ b/project/practise hero/index.html
@@ -13,12 +13,29 @@
         <div class="half-width">
             <h1>WELCOME</h1>
             <h3>AZIM ASHIQUE</h3>
-            <h4>portfolio</h4>
+            <h4>portfolio world</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta id praesentium aliquid ut, odit ex corporis molestias, veritatis magnam deleniti illum enim libero perspiciatis dolorum quibusdam nesciunt numquam explicabo ratione?</p>
         </div>
 
         <div class="half-width">
-
+            <img src="" alt="">
         </div>
+    </section>
+
+    <section id="welcome">
+        <div class="half-width">
+            <img src="" alt="">
+        </div>
+
+        <div class="half-width">
+            <h1>Want To know About Me?</h1>
+            <h3>Fron-End Developer</h3>
+            <h4>Here is my Description</h4>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate ipsam obcaecati numquam mollitia, nostrum necessitatibus fugiat velit architecto ex aliquam cupiditate. Ullam animi harum nisi tempore sed quo, corporis a voluptas, debitis
+                libero iste veritatis mollitia, illum porro quos eaque! Exercitationem cumque aut ea sapiente a commodi doloribus doloremque molestias, laboriosam obcaecati enim laudantium dolorum rerum at fugit dolores vel.</p>
+        </div>
+
+
     </section>
 </body>
 
