--- a/project/practise hero/index.html
+++ b/project/practise hero/index.html
@@ -6,23 +6,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my portfolio practise</title>
+    <!--Main Css-->
+    <link rel="stylesheet" href="style.css">
+    <!--Main Css-->
+
+    <!--Google font CSS-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <!--Google font CSS-->
+
 </head>
 
 <body>
     <section id="welcome">
         <div class="half-width">
             <h1>WELCOME</h1>
-            <h3>AZIM ASHIQUE</h3>
-            <h4>portfolio world</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta id praesentium aliquid ut, odit ex corporis molestias, veritatis magnam deleniti illum enim libero perspiciatis dolorum quibusdam nesciunt numquam explicabo ratione?</p>
+            <h1><span class="AZ">AZIM ASHIQUE</span> Portfolio world</h1>
+
+            <p>hay this is Azim. I was the student of East delte University. I was graduated on 2019 from CSE dept. Here is my website You can visit feel free.Now I am the student of Programming hero course of complete web development by jhankar mahbub.I
+                am very interested of this course</p>
+            <a href="https://www.facebook.com/rbk.ashik" target="_blank">Hire Me</a>
         </div>
 
         <div class="half-width">
-            <img src="" alt="">
+            <img src="./images/intro.png" alt="intro">
         </div>
     </section>
 
-    <section id="welcome">
+    <section id="AboutMe">
         <div class="half-width">
             <img src="" alt="">
         </div>
@@ -34,7 +46,23 @@
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate ipsam obcaecati numquam mollitia, nostrum necessitatibus fugiat velit architecto ex aliquam cupiditate. Ullam animi harum nisi tempore sed quo, corporis a voluptas, debitis
                 libero iste veritatis mollitia, illum porro quos eaque! Exercitationem cumque aut ea sapiente a commodi doloribus doloremque molestias, laboriosam obcaecati enim laudantium dolorum rerum at fugit dolores vel.</p>
         </div>
+    </section>
+    <section id="experience">
+        <div class="title">
+            <h1 id="exp">Experience</h1>
+        </div>
 
+        <div class="half-width">
+            <h4></h4>
+            <h3></h3>
+            <p></p>
+        </div>
+
+        <div class="half-width">
+            <h4></h4>
+            <h3></h3>
+            <p></p>
+        </div>
 
     </section>
 </body>
