experience and footer added

--- a/project/practise hero/index.html
+++ b/project/practise hero/index.html
@@ -19,6 +19,8 @@
 </head>
 
 <body>
+    <!--welcome section-->
+
     <section id="welcome">
         <div class="half-width">
             <h1>WELCOME</h1>
@@ -34,9 +36,12 @@
         </div>
     </section>
 
-    <section id="AboutMe">
+    <!--welcome section-->
+
+    <!--About section-->
+    <section id="about">
         <div class="half-width">
-            <img src="" alt="">
+            <img src="./images/about.png" alt="about">
         </div>
 
         <div class="half-width">
@@ -45,26 +50,35 @@
             <h4>Here is my Description</h4>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate ipsam obcaecati numquam mollitia, nostrum necessitatibus fugiat velit architecto ex aliquam cupiditate. Ullam animi harum nisi tempore sed quo, corporis a voluptas, debitis
                 libero iste veritatis mollitia, illum porro quos eaque! Exercitationem cumque aut ea sapiente a commodi doloribus doloremque molestias, laboriosam obcaecati enim laudantium dolorum rerum at fugit dolores vel.</p>
+            <a href="https://www.facebook.com/rbk.ashik" target="_blank">DOWNLOAD RESUME</a>
         </div>
     </section>
+    <!--About section-->
+
     <section id="experience">
         <div class="title">
-            <h1 id="exp">Experience</h1>
+            <h1>Experience</h1>
         </div>
 
-        <div class="half-width">
-            <h4></h4>
-            <h3></h3>
-            <p></p>
-        </div>
+        <div class="flexiable-contain">
+            <div id="full-stack" class="experience-item">
+                <h4>Full Stack Developer</h4>
+                <h3>2022-now- at present</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum repudiandae assumenda aliquid, maiores obcaecati quas!</p>
+            </div>
 
-        <div class="half-width">
-            <h4></h4>
-            <h3></h3>
-            <p></p>
+            <div id="front-end" class="experience-item">
+                <h4>Front End Developer</h4>
+                <h3>2019-2022-hero learner</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In nobis, a eveniet temporibus maiores voluptate.</p>
+            </div>
         </div>
 
     </section>
+
+    <footer>
+        <p>copyright & All right reserved by azim</p>
+    </footer>
 </body>
 
 </html>
