--- a/project/day1,2,3/index.html
+++ b/project/day1,2,3/index.html
@@ -10,10 +10,53 @@
 </head>
 
 <body>
-    <h1>azim</h1>
-    <h3>ashique</h3>
-    <h4>azim</h4>
-    <img src="./images/myImg.jpg" alt="">
+    <nav>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">COntact</a>
+                <ul class="dropdown">
+                    <li><a href="">Email</a></li>
+                    <li><a href="">Mobile</a></li>
+                </ul>
+            </li>
+            <li><a href="">Share</a></li>
+        </ul>
+    </nav>
+
+    <!-- form-->
+    <form action="">
+        <input type="text" placeholder="First Name">
+    </form>
+
+    <textarea name="" id="" cols="50" rows="50">
+        
+    </textarea>
+
+    <fieldset>
+        <legend>write your des </legend>
+    </fieldset>
+    <!-- form -->
+
+    <aside>
+        <p>love u</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi iste rem hic error odit esse obcaecati illum sapiente distinctio, neque dolorum velit. Adipisci error autem saepe dicta amet inventore corporis nisi ipsum, esse incidunt nam eveniet
+            numquam rem, ullam earum officiis neque recusandae cumque aperiam quod officia provident totam. Tempore repellat officiis officia, tenetur, suscipit aspernatur praesentium fugit maiores quaerat eius numquam! Saepe officia recusandae cumque
+            asperiores porro quae repellendus obcaecati quia sequi? Reiciendis delectus iure vitae corrupti magni fugiat! Minus dolore, omnis nostrum molestiae quibusdam sunt nisi? Soluta quam commodi molestiae repellat officiis dolores error distinctio
+            iusto illum facilis, odio fuga totam repellendus delectus ipsum tempora sunt quaerat assumenda ducimus quae aspernatur rem ad ut perferendis. Debitis enim adipisci facilis aliquam vel delectus blanditiis odit eligendi, natus maiores vitae
+            recusandae consectetur reiciendis quasi tempore eius quos perferendis voluptatem provident esse veniam repellat atque. Eum corrupti magni fugiat vitae, aspernatur eius suscipit cumque sit esse nesciunt vel beatae et voluptatibus commodi. Odio
+            assumenda veritatis, esse unde molestiae dolor praesentium laboriosam iure ratione aut earum architecto nostrum soluta harum doloribus dolorum repudiandae cum quisquam illo! Dolore blanditiis inventore autem veniam ea eveniet quidem esse officiis,
+            ex qui exercitationem nesciunt minus nemo laboriosam incidunt amet aspernatur, beatae facilis! Fugiat tempora dignissimos magnam perferendis officia quod reiciendis sequi dolorum, vero error libero eaque molestiae ex voluptatibus fugit excepturi,
+            eius in explicabo tenetur facilis maxime ad doloribus. Libero excepturi exercitationem tempore veritatis ad, ratione eos aperiam. Culpa ullam ratione aliquid soluta cum ea numquam quis natus cumque tempora. Nesciunt molestias facilis fuga
+            atque debitis cum eligendi veniam praesentium ut velit adipisci autem sint voluptas, fugit animi omnis ex, quisquam laborum eos reiciendis? Repellat dolore itaque numquam, soluta reiciendis deleniti alias consequuntur dolorem quam esse modi
+            possimus cumque tenetur sed nesciunt nobis? Quis pariatur cumque atque excepturi. Illum officia error quis perferendis non natus, ratione ad totam ab atque quidem ullam deleniti vel unde quasi animi quas quod maiores, in vitae similique, debitis
+            facere. Corporis neque, illum iste sapiente consectetur adipisci, fugit nostrum quaerat iusto distinctio odio consequatur fuga aperiam eum repudiandae mollitia minus totam reprehenderit nesciunt dolores animi inventore, officiis incidunt.
+            Eaque culpa corrupti ipsam, provident debitis quibusdam optio hic alias! Assumenda, corrupti. Dolorem accusantium deserunt architecto soluta totam beatae quibusdam quo eos ullam exercitationem? Suscipit deleniti ut libero architecto, reiciendis
+            ab harum esse nostrum perferendis laborum soluta sequi quisquam tenetur. Repudiandae quo voluptatum dicta quia illo nam eius consequatur accusamus nihil, distinctio praesentium veritatis, facere voluptate adipisci vel amet ad sunt, itaque
+            excepturi earum aut minus. Consectetur voluptatum numquam in a dolorem sint odio cum, doloremque fuga corporis, magnam, minus molestias facere modi voluptates doloribus? Excepturi vero voluptatum necessitatibus itaque ullam, doloribus eum
+            eligendi sint magni et ab nobis repellat accusamus minus natus dolor unde similique culpa enim? Nemo unde sit quisquam est veniam temporibus et ipsa voluptatem, fuga, eligendi cupiditate modi. Deleniti inventore reprehenderit error fugit numquam,
+            aspernatur recusandae hic odit sapiente, dolorum iusto obcaecati dolores, soluta quae officia perferendis possimus maxime.</p>
+    </aside>
 
 
 </body>
